Fixed readability for update_complete

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -850,6 +850,7 @@ form textarea {
     border-radius: 5px 5px 0 0;
     color: #f4f4f4;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    font-weight: 700;
 }
 
 .new-container-header h2, .old-container-header h2 {
@@ -866,6 +867,7 @@ form textarea {
     border-radius: 5px 5px 0 0;
     color: #f4f4f4;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    font-weight: 700;
 }
 
 .update-success-main {
